[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra"
version = "0.5.0"
authors = [{ name = "Korarei" }]
description = "A build and deployment tool for AviUtl ExEdit2 scripts and plugins."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"

[project.scripts]
astra = "astra.cli:main"
