[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra"
version = "0.5.2"
authors = [{ name = "Korarei" }]
description = "A build and deployment tool for AviUtl ExEdit2 scripts and plugins."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["packaging>=23.0"]

[project.scripts]
astra = "astra.cli:main"

[tool.uv]
managed = true

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "recommended"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
