[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra"
version = "0.6.3"
authors = [{ name = "Korarei" }]
description = "A build and deployment tool for AviUtl ExEdit2 extensions."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = ["packaging>=23.1", "filelock>=3.12.0", "pydantic>=2.5.0"]

[project.scripts]
astra = "astra.cli:main"

[tool.uv]
managed = true

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "recommended"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
